@@ -28,7 +28,7 @@ public class ParseMethodCall extends CommonParse {
     public Expression parse(Context context, List<Comment> comments, Source source,
                             String index, ForwardType forwardType, org.parsers.java.ast.MethodCall mc) {
         List<Object> unparsedArguments = new ArrayList<>();
-        Node name = mc.get(0);
+        Node name = mc.getFirst();
         assert name instanceof Name || name instanceof DotName;
         Node methodNameNode = name.get(name.size() - 1);
         String methodName = methodNameNode.getSource();
